# Nexus6HealthCareDataGenerator

./: .env  README.md  README.txt  STARTUP_GUIDE.md  ai_providers.py  brain.py  chatbot_server.py  config.py  file_processor.py  government_healthcare_patterns.json  guardrails.py  insurance_claims.csv  integrated_chatbot_server.py  main.py  nexus_analytics_integrated.html  nexus_analytics_minimalist.html  nexus_analytics_with_phara.html  patient_demographics.csv  processing_report.json  pyproject.toml  quick_start_example.py  read.py  requirements.txt  start.bat  start.sh  voice.py
data/: hackathon_dataset.xlsx  test_data.csv
government_data_cache/: cdc_health_stats.json  cms_provider_data.json  hhs_facility_data.json  medicare_specialty_data.json
